--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -9,11 +9,7 @@
   grid-template-columns: 1fr;
   grid-gap: 10px;
   margin-bottom: 20px;
-}
-
-.new-task .form-group {
-  display: flex;
-  flex-direction: column;
+  align-items: baseline;
 }
 
 @media screen and (min-width: 768px) {
@@ -34,7 +30,6 @@
 }
 
 .tasks .task {
-  background-color: white;
   border: 1px solid black;
   margin-bottom: 10px;
   padding: 10px;
